Fixes some small alignment issues

--- a/style.css
+++ b/style.css
@@ -233,7 +233,7 @@ a {
 .random4 {
 
     position: fixed;
-    top: 67%;
+    top: 60%;
     right: 3%;
 
     color: transparent;
@@ -431,7 +431,7 @@ a {
 @media screen and  (min-width:751px){
 .container3 p {
     position: absolute;
-    top: -10%;
+    top: -15%;
     right: 3%;
 
     color: transparent;
